<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/starwars_memory_logo"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEasy"
            android:text="@string/easy_mode"
            style="@style/buttonPlay" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMedium"
            android:text="@string/medium_mode"
            style="@style/buttonPlay" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonHard"
            android:text="@string/hard_mode"
            style="@style/buttonPlay" />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>