<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragmentContainer"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearTextView"/>

    <LinearLayout
        android:id="@+id/linearTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@id/linearButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            app:strokeWidth="2dp"
            android:gravity="center"
            app:strokeColor="@color/yellow"
            android:text="@string/moves"/>

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            app:strokeWidth="2dp"
            android:gravity="center"
            app:strokeColor="@color/yellow"
            android:text="@string/timer"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            app:strokeWidth="2dp"
            android:gravity="center"
            app:strokeColor="@color/yellow"
            android:text="@string/pairs_left"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMoves"
            android:clickable="false"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:text="0"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="2dp"
            app:strokeColor="@color/yellow"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTimer"
            android:clickable="false"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="2dp"
            app:strokeColor="@color/yellow"
            android:text="60"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPairsLeft"
            android:clickable="false"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="2dp"
            app:strokeColor="@color/yellow"/>

    </LinearLayout>

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>